Authors: added myself to the author list.
Authors: added ansh to the author list. Jonathan still needs to add
himself, and Beniada should put her name in the acknowledgements
section.

--- a/front_propagation_final.tex
+++ b/front_propagation_final.tex
@@ -16,7 +16,7 @@
 %                                     also used for the TOC unless
 %                                     \toctitle is used
 %
-\author{PUT YOUR NAME HERE\inst{1} \and PUT YOUR NAME HERE\inst{1}}
+\author{Ansh Shukla\inst{1} \and PUT YOUR NAME HERE\inst{1}}
 %
 %\authorrunning{Ansh Shukla et al.} % abbreviated author list (for running head)
 %
