--- a/front_propagation_final.tex
+++ b/front_propagation_final.tex
@@ -10,7 +10,7 @@
 
 \begin{document}
 
-\title{Front Propagation in the $2$-D Fisher-KPP Equation }
+\title{Front propagation for multidimensional Fisher-KPP equations}
 %
 %\titlerunning{}  % abbreviated title (for running head)
 %                                     also used for the TOC unless
@@ -82,6 +82,7 @@ Sect.~5.2 of this article.
 
 We would like to thank the organizers and supporters of the SURIM program
 Marion Campisi and the Stanford Mathematics Department along with our advisor
+{Beniada Shabani}. You are great, and I am not ready to write an actual
 acknowledgement.
 
 %
